I added the images folder with needed images as well as made changes to index

--- a/index.html
+++ b/index.html
@@ -1,5 +1,16 @@
 <!DOCTYPE html>
 <html>
-<head></head>
-<body></body>
+    <head>
+        <meta charset='utf-8'>
+        <title>T-Shirt Shop</title>
+        <link href='style.css' rel='stylesheet' type='text/css'>
+    </head>
+
+    <body>
+        <form>
+            <fieldset class='blue-shirt'></fieldset>
+            <fieldset class='pink-shirt'></fieldset>
+            <fieldset class='yellow-shirt'></fieldset>
+        </form>
+    </body>
 <html>
