I got the blue shirt to show up

--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
 
     <body>
         <form>
-            <fieldset class='blue-shirt'></fieldset>
-            <fieldset class='pink-shirt'></fieldset>
+            <fieldset class='blue-shirt'>
+                <img class='shirt-front' src='images/blue-front.png'>
+                <img class='shirt-back' src='images/blue-back.png'>
+            </fieldset>
+            <fieldset class='pink-shirt'>
+                <img src='images'
+            </fieldset>
             <fieldset class='yellow-shirt'></fieldset>
         </form>
     </body>
