i added unordered list to the shirt sizes and copied the normalize stylesheet

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <form>
             <fieldset class='blue-shirt'>
                 <img class='shirt-front' src='images/blue-front.png'>
-                <img class='shirt-back' src='images/blue-back.png'>
+                <ul class='t-shirt-sizes'></ul>
             </fieldset>
             <fieldset class='pink-shirt'>
                 <img src='images'
