I added normalize.css to index.html

--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
     <head>
         <meta charset='utf-8'>
         <title>T-Shirt Shop</title>
+        <link href="normalize.css" rel='stylesheet' type='text/css'>
         <link href='style.css' rel='stylesheet' type='text/css'>
+
     </head>
 
     <body>
         <form>
             <fieldset class='blue-shirt'>
                 <img class='shirt-front' src='images/blue-front.png'>
-                <ul class='t-shirt-sizes'></ul>
+
             </fieldset>
             <fieldset class='pink-shirt'>
                 <img src='images'
