Added menu options as a ul

--- a/index.html
+++ b/index.html
@@ -12,11 +12,16 @@
         <form>
             <fieldset class='blue-shirt'>
                 <img class='shirt-front' src='images/blue-front.png'>
+                <ul class='shirt-options'>
+                    <li>#</li>
+                    <li>#</li>
+                    <li>#</li>
+                    <li>#</li>
+                    <li>#</li>
+                </ul>
 
             </fieldset>
-            <fieldset class='pink-shirt'>
-                <img src='images'
-            </fieldset>
+            <fieldset class='pink-shirt'></fieldset>
             <fieldset class='yellow-shirt'></fieldset>
         </form>
     </body>
