I added a new section about the shirt information

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
                     <li>#</li>
                     <li>#</li>
                 </ul>
+                <section class='shirt-info'>
+                    <p class='shirt-name'></p>
+                    <p class='shirt-price'></p>
+                </section>
 
             </fieldset>
             <fieldset class='pink-shirt'></fieldset>
