--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>T-Shirt Shop</title>
         <link href="normalize.css" rel='stylesheet' type='text/css'>
         <link href='style.css' rel='stylesheet' type='text/css'>
-
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
     </head>
 
     <body>
@@ -13,20 +13,24 @@
             <fieldset class='blue-shirt'>
                 <img class='shirt-front' src='images/blue-front.png'>
                 <ul class='shirt-options'>
-                    <li>#</li>
-                    <li>#</li>
-                    <li>#</li>
-                    <li>#</li>
-                    <li>#</li>
+                    <li class='menu'>1</li>
+                    <li class='menu'>2</li>
+                    <li class='menu'>3</li>
+                    <li class='menu'>4</li>
+                    <li class='menu'>5</li>
                 </ul>
                 <section class='shirt-info'>
-                    <p class='shirt-name'></p>
-                    <p class='shirt-price'></p>
+                    <p class='shirt-name'>TEST1</p>
+                    <p class='shirt-price'>TEST2</p>
                 </section>
+            </fieldset>
+            <fieldset class='pink-shirt'>
+                <img class='shirt-front' src='images/pink-front.png'>
 
             </fieldset>
-            <fieldset class='pink-shirt'></fieldset>
-            <fieldset class='yellow-shirt'></fieldset>
+            <fieldset class='yellow-shirt'>
+                <img class='shirt-front' src='images/yellow-front.png'>
+            </fieldset>
         </form>
     </body>
 <html>
