--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <fieldset class='blue-shirt'>
                 <img class='shirt-front' src='images/blue-front.png'>
                 <ul class='shirt-options'>
-                    <li class='menu'>1</li>
+                    <li class='menu' class='fa fa-font-awesome'></li>
                     <li class='menu'>2</li>
                     <li class='menu'>3</li>
                     <li class='menu'>4</li>
@@ -26,10 +26,32 @@
             </fieldset>
             <fieldset class='pink-shirt'>
                 <img class='shirt-front' src='images/pink-front.png'>
+                <ul class='shirt-options'>
+                    <li class='menu' class='fa fa-font-awesome'></li>
+                    <li class='menu'>2</li>
+                    <li class='menu'>3</li>
+                    <li class='menu'>4</li>
+                    <li class='menu'>5</li>
+                </ul>
+                <section class='shirt-info'>
+                    <p class='shirt-name'>TEST1</p>
+                    <p class='shirt-price'>TEST2</p>
+                </section>
 
             </fieldset>
             <fieldset class='yellow-shirt'>
                 <img class='shirt-front' src='images/yellow-front.png'>
+                <ul class='shirt-options'>
+                    <li class='menu' class='fa fa-font-awesome'></li>
+                    <li class='menu'>2</li>
+                    <li class='menu'>3</li>
+                    <li class='menu'>4</li>
+                    <li class='menu'>5</li>
+                </ul>
+                <section class='shirt-info'>
+                    <p class='shirt-name'>TEST1</p>
+                    <p class='shirt-price'>TEST2</p>
+                </section>
             </fieldset>
         </form>
     </body>
