I put borders around each elemet for styling purposes

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <fieldset class='blue-shirt'>
                 <img class='shirt-front' src='images/blue-front.png'>
                 <ul class='shirt-options'>
-                    <li class='menu' class='fa fa-font-awesome'></li>
+                    <li class='menu'>1</li>
                     <li class='menu'>2</li>
                     <li class='menu'>3</li>
                     <li class='menu'>4</li>
@@ -27,7 +27,7 @@
             <fieldset class='pink-shirt'>
                 <img class='shirt-front' src='images/pink-front.png'>
                 <ul class='shirt-options'>
-                    <li class='menu' class='fa fa-font-awesome'></li>
+                    <li class='menu'>1</li>
                     <li class='menu'>2</li>
                     <li class='menu'>3</li>
                     <li class='menu'>4</li>
@@ -42,7 +42,7 @@
             <fieldset class='yellow-shirt'>
                 <img class='shirt-front' src='images/yellow-front.png'>
                 <ul class='shirt-options'>
-                    <li class='menu' class='fa fa-font-awesome'></li>
+                    <li class='menu'>1</li>
                     <li class='menu'>2</li>
                     <li class='menu'>3</li>
                     <li class='menu'>4</li>
