I added the text for the shirt name and price. I also made the shirt price bold

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                     <li class='menu'>5</li>
                 </ul>
                 <section class='shirt-info'>
-                    <p class='shirt-name'>TEST1</p>
-                    <p class='shirt-price'>TEST2</p>
+                    <p class='shirt-name'>Save my trees</p>
+                    <p class='shirt-price'>$29</p>
                 </section>
             </fieldset>
             <fieldset class='pink-shirt'>
@@ -34,8 +34,8 @@
                     <li class='menu'>5</li>
                 </ul>
                 <section class='shirt-info'>
-                    <p class='shirt-name'>TEST1</p>
-                    <p class='shirt-price'>TEST2</p>
+                    <p class='shirt-name'>Nature Lover</p>
+                    <p class='shirt-price'>$19</p>
                 </section>
 
             </fieldset>
@@ -49,8 +49,8 @@
                     <li class='menu'>5</li>
                 </ul>
                 <section class='shirt-info'>
-                    <p class='shirt-name'>TEST1</p>
-                    <p class='shirt-price'>TEST2</p>
+                    <p class='shirt-name'>Forrest Walk</p>
+                    <p class='shirt-price'>$39</p>
                 </section>
             </fieldset>
         </form>
