I added the font awesome icons to the menu bar. Next, I will add them under the pink and yellow shirts

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
             <fieldset class='blue-shirt'>
                 <img class='shirt-front' src='images/blue-front.png'>
                 <ul class='shirt-options'>
-                    <li class='menu'>1</li>
-                    <li class='menu'>2</li>
-                    <li class='menu'>3</li>
-                    <li class='menu'>4</li>
-                    <li class='menu'>5</li>
+                    <li class='fa fa-money'></li>
+                    <li class='fa fa-euro'></li>
+                    <li class='fa fa-gbp'></li>
+                    <li class='fa fa-eur'></li>
+                    <li class='fa fa-btc'></li>
                 </ul>
                 <section class='shirt-info'>
                     <p class='shirt-name'>Save my trees</p>
