I added the font awesome fonts to the other shirts. I also tried to perfect the css some more.

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
             <fieldset class='pink-shirt'>
                 <img class='shirt-front' src='images/pink-front.png'>
                 <ul class='shirt-options'>
-                    <li class='menu'>1</li>
-                    <li class='menu'>2</li>
-                    <li class='menu'>3</li>
-                    <li class='menu'>4</li>
-                    <li class='menu'>5</li>
+                    <li class='fa fa-money'></li>
+                    <li class='fa fa-euro'></li>
+                    <li class='fa fa-gbp'></li>
+                    <li class='fa fa-eur'></li>
+                    <li class='fa fa-btc'></li>
                 </ul>
                 <section class='shirt-info'>
                     <p class='shirt-name'>Nature Lover</p>
@@ -42,11 +42,11 @@
             <fieldset class='yellow-shirt'>
                 <img class='shirt-front' src='images/yellow-front.png'>
                 <ul class='shirt-options'>
-                    <li class='menu'>1</li>
-                    <li class='menu'>2</li>
-                    <li class='menu'>3</li>
-                    <li class='menu'>4</li>
-                    <li class='menu'>5</li>
+                    <li class='fa fa-money'></li>
+                    <li class='fa fa-euro'></li>
+                    <li class='fa fa-gbp'></li>
+                    <li class='fa fa-eur'></li>
+                    <li class='fa fa-btc'></li>
                 </ul>
                 <section class='shirt-info'>
                     <p class='shirt-name'>Forrest Walk</p>
