I got the pictures to respond to the size of the browser window :). Next, I will get the back of the shirts to be behind the front of the shirts

--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
         <form>
             <fieldset class='blue-shirt'>
                 <img class='shirt-front' src='images/blue-front.png'>
+                <!-- <img class='shirt-back' src='images/blue-back.png'> -->
                 <ul class='shirt-options'>
-                    <li class='fa fa-money'></li>
+                    <li class='fa fa-money'>
+                    </li>
                     <li class='fa fa-euro'></li>
                     <li class='fa fa-gbp'></li>
                     <li class='fa fa-eur'></li>
