I have the back of the shirt on the HTML, but made it hidden with css

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <form>
             <fieldset class='blue-shirt'>
                 <img class='shirt-front' src='images/blue-front.png'>
-                <!-- <img class='shirt-back' src='images/blue-back.png'> -->
+                <img class='shirt-back' src='images/blue-back.png'>
                 <ul class='shirt-options'>
                     <li class='fa fa-money'>
                     </li>
@@ -28,6 +28,7 @@
             </fieldset>
             <fieldset class='pink-shirt'>
                 <img class='shirt-front' src='images/pink-front.png'>
+                <img class='shirt-back' src='images/pink-back.png'>
                 <ul class='shirt-options'>
                     <li class='fa fa-money'></li>
                     <li class='fa fa-euro'></li>
@@ -43,6 +44,7 @@
             </fieldset>
             <fieldset class='yellow-shirt'>
                 <img class='shirt-front' src='images/yellow-front.png'>
+                <img class='shirt-back' src='images/yellow-back.png'>
                 <ul class='shirt-options'>
                     <li class='fa fa-money'></li>
                     <li class='fa fa-euro'></li>
