--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <fieldset class='blue-shirt'>
                 <img class='shirt-front' src='images/blue-front.png'>
                 <img class='shirt-back' src='images/blue-back.png'>
+                <p class='fa fa-undo'></p>
                 <ul class='shirt-options'>
                     <li class='fa fa-money'>
                     </li>
@@ -29,6 +30,7 @@
             <fieldset class='pink-shirt'>
                 <img class='shirt-front' src='images/pink-front.png'>
                 <img class='shirt-back' src='images/pink-back.png'>
+                <p class='fa fa-undo'></p>
                 <ul class='shirt-options'>
                     <li class='fa fa-money'></li>
                     <li class='fa fa-euro'></li>
@@ -45,6 +47,7 @@
             <fieldset class='yellow-shirt'>
                 <img class='shirt-front' src='images/yellow-front.png'>
                 <img class='shirt-back' src='images/yellow-back.png'>
+                <p class='fa fa-undo'></p>
                 <ul class='shirt-options'>
                     <li class='fa fa-money'></li>
                     <li class='fa fa-euro'></li>
