I added shirt sizes to the GBP button and made set on display: none

--- a/index.html
+++ b/index.html
@@ -51,7 +51,14 @@
                 <ul class='shirt-options'>
                     <li class='fa fa-money'></li>
                     <li class='fa fa-euro'></li>
-                    <li class='fa fa-gbp'></li>
+                    <li class='fa fa-gbp'>
+                        <ul class ='shirt-size'>
+                            <li>XL</li>
+                            <li>L</li>
+                            <li>M</li>
+                            <li>S</li>
+                        </ul>
+                    </li>
                     <li class='fa fa-eur'></li>
                     <li class='fa fa-btc'></li>
                 </ul>
