I found an answer to my question and I am cleaning up old code

--- a/index.html
+++ b/index.html
@@ -15,10 +15,16 @@
                 <img class='shirt-back' src='images/blue-back.png'>
                 <p class='fa fa-undo'></p>
                 <ul class='shirt-options'>
-                    <li class='fa fa-money'>
-                    </li>
+                    <li class='fa fa-money'></li>
                     <li class='fa fa-euro'></li>
-                    <li class='fa fa-gbp'></li>
+                    <li class='fa fa-gbp'>
+                      <ul class ='dropdown'>
+                          <li>XL</li>
+                          <li>L</li>
+                          <li>M</li>
+                          <li>S</li>
+                      </ul>
+                    </li>
                     <li class='fa fa-eur'></li>
                     <li class='fa fa-btc'></li>
                 </ul>
@@ -34,7 +40,14 @@
                 <ul class='shirt-options'>
                     <li class='fa fa-money'></li>
                     <li class='fa fa-euro'></li>
-                    <li class='fa fa-gbp'></li>
+                    <li class='fa fa-gbp'>
+                      <ul class ='dropdown'>
+                          <li>XL</li>
+                          <li>L</li>
+                          <li>M</li>
+                          <li>S</li>
+                      </ul>
+                    </li>
                     <li class='fa fa-eur'></li>
                     <li class='fa fa-btc'></li>
                 </ul>
@@ -52,7 +65,7 @@
                     <li class='fa fa-money'></li>
                     <li class='fa fa-euro'></li>
                     <li class='fa fa-gbp'>
-                        <ul class ='shirt-size'>
+                        <ul class ='dropdown'>
                             <li>XL</li>
                             <li>L</li>
                             <li>M</li>
