I got the dropdown menu to work. Next is to make the menu drop up

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <ul class='shirt-options'>
                     <li class='fa fa-money'></li>
                     <li class='fa fa-euro'></li>
-                    <li class='fa fa-gbp'>
+                    <li class='fa fa-gbp menu-button'>
                       <ul class ='dropdown'>
                           <li>XL</li>
                           <li>L</li>
@@ -40,7 +40,7 @@
                 <ul class='shirt-options'>
                     <li class='fa fa-money'></li>
                     <li class='fa fa-euro'></li>
-                    <li class='fa fa-gbp'>
+                    <li class='fa fa-gbp menu-button'>
                       <ul class ='dropdown'>
                           <li>XL</li>
                           <li>L</li>
@@ -64,7 +64,7 @@
                 <ul class='shirt-options'>
                     <li class='fa fa-money'></li>
                     <li class='fa fa-euro'></li>
-                    <li class='fa fa-gbp'>
+                    <li class='fa fa-gbp menu-button'>
                         <ul class ='dropdown'>
                             <li>XL</li>
                             <li>L</li>
