--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
                           <li>S</li>
                       </ul>
                     </li>
-                    <li class='fa fa-eur'></li>
+                    <li class='fa fa-eur menu-button'>
+                      <ul class='dropdown'>
+                          <li class='fa fa-flask'></li>
+                      </ul>
+                    </li>
                     <li class='fa fa-btc'></li>
                 </ul>
                 <section class='shirt-info'>
@@ -48,7 +52,11 @@
                           <li>S</li>
                       </ul>
                     </li>
-                    <li class='fa fa-eur'></li>
+                    <li class='fa fa-eur menu-button'>
+                        <ul class='dropdown'>
+                            <li class='fa fa-flask'></li>
+                        </ul>
+                    </li>
                     <li class='fa fa-btc'></li>
                 </ul>
                 <section class='shirt-info'>
@@ -72,7 +80,11 @@
                             <li>S</li>
                         </ul>
                     </li>
-                    <li class='fa fa-eur'></li>
+                    <li class='fa fa-eur menu-button'>
+                      <ul class='dropdown'>
+                          <li class='fa fa-flask'></li>
+                      </ul>
+                    </li>
                     <li class='fa fa-btc'></li>
                 </ul>
                 <section class='shirt-info'>
