I started to refactor my code by changing form to main and fieldset to article

--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
     <head>
         <meta charset='utf-8'>
         <title>T-Shirt Shop</title>
+        <meta name='viewport' content='width=device-width, initial-scale=1'>
         <link href="normalize.css" rel='stylesheet' type='text/css'>
         <link href='style.css' rel='stylesheet' type='text/css'>
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
     </head>
 
     <body>
-        <form>
-            <fieldset class='blue-shirt'>
+        <main>
+            <article>
                 <img class='shirt-front' src='images/blue-front.png'>
                 <img class='shirt-back' src='images/blue-back.png'>
                 <p class='fa fa-undo'></p>
@@ -25,19 +26,16 @@
                           <li>S</li>
                       </ul>
                     </li>
-                    <li class='fa fa-eur menu-button'>
-                      <ul class='dropdown'>
-                          <li class='fa fa-flask'></li>
-                      </ul>
-                    </li>
+                    <li class='fa fa-eur'></li>
                     <li class='fa fa-btc'></li>
                 </ul>
                 <section class='shirt-info'>
                     <p class='shirt-name'>Save my trees</p>
                     <p class='shirt-price'>$29</p>
                 </section>
-            </fieldset>
-            <fieldset class='pink-shirt'>
+            </article>
+
+            <article>
                 <img class='shirt-front' src='images/pink-front.png'>
                 <img class='shirt-back' src='images/pink-back.png'>
                 <p class='fa fa-undo'></p>
@@ -52,10 +50,8 @@
                           <li>S</li>
                       </ul>
                     </li>
-                    <li class='fa fa-eur menu-button'>
-                        <ul class='dropdown'>
-                            <li class='fa fa-flask'></li>
-                        </ul>
+                    <li class='fa fa-eur'>
+                        <ul class='dropdown'></ul>
                     </li>
                     <li class='fa fa-btc'></li>
                 </ul>
@@ -63,9 +59,10 @@
                     <p class='shirt-name'>Nature Lover</p>
                     <p class='shirt-price'>$19</p>
                 </section>
+            </article>
 
-            </fieldset>
-            <fieldset class='yellow-shirt'>
+
+            <article>
                 <img class='shirt-front' src='images/yellow-front.png'>
                 <img class='shirt-back' src='images/yellow-back.png'>
                 <p class='fa fa-undo'></p>
@@ -80,18 +77,15 @@
                             <li>S</li>
                         </ul>
                     </li>
-                    <li class='fa fa-eur menu-button'>
-                      <ul class='dropdown'>
-                          <li class='fa fa-flask'></li>
-                      </ul>
-                    </li>
+                    <li class='fa fa-eur'></li>
                     <li class='fa fa-btc'></li>
                 </ul>
                 <section class='shirt-info'>
                     <p class='shirt-name'>Forrest Walk</p>
                     <p class='shirt-price'>$39</p>
                 </section>
-            </fieldset>
-        </form>
+            </article>
+
+        </main>
     </body>
 <html>
