I got rid of the menu-button class because it was extraneous and added a nav to the ul under the tshirt container

--- a/index.html
+++ b/index.html
@@ -12,37 +12,44 @@
     <body>
         <main>
             <article>
+              <section>
                 <img class='shirt-front' src='images/blue-front.png'>
                 <img class='shirt-back' src='images/blue-back.png'>
                 <p class='fa fa-undo'></p>
-                <ul class='shirt-options'>
-                    <li class='fa fa-money'></li>
-                    <li class='fa fa-euro'></li>
-                    <li class='fa fa-gbp menu-button'>
-                      <ul class ='dropdown'>
-                          <li>XL</li>
-                          <li>L</li>
-                          <li>M</li>
-                          <li>S</li>
-                      </ul>
-                    </li>
-                    <li class='fa fa-eur'></li>
-                    <li class='fa fa-btc'></li>
-                </ul>
-                <section class='shirt-info'>
-                    <p class='shirt-name'>Save my trees</p>
-                    <p class='shirt-price'>$29</p>
-                </section>
+              </section>
+              <nav>
+                  <ul class='shirt-options'>
+                      <li class='fa fa-money'></li>
+                      <li class='fa fa-euro'></li>
+                      <li class='fa fa-gbp'>
+                        <ul class ='dropdown'>
+                            <li>XL</li>
+                            <li>L</li>
+                            <li>M</li>
+                            <li>S</li>
+                        </ul>
+                      </li>
+                      <li class='fa fa-eur'></li>
+                      <li class='fa fa-btc'></li>
+                  </ul>
+              </nav>
+              <section class='shirt-info'>
+                  <p class='shirt-name'>Save my trees</p>
+                  <p class='shirt-price'>$29</p>
+              </section>
             </article>
 
             <article>
+              <section>
                 <img class='shirt-front' src='images/pink-front.png'>
                 <img class='shirt-back' src='images/pink-back.png'>
                 <p class='fa fa-undo'></p>
+              </section>
+              <nav>
                 <ul class='shirt-options'>
                     <li class='fa fa-money'></li>
                     <li class='fa fa-euro'></li>
-                    <li class='fa fa-gbp menu-button'>
+                    <li class='fa fa-gbp'>
                       <ul class ='dropdown'>
                           <li>XL</li>
                           <li>L</li>
@@ -55,6 +62,7 @@
                     </li>
                     <li class='fa fa-btc'></li>
                 </ul>
+              </nav>
                 <section class='shirt-info'>
                     <p class='shirt-name'>Nature Lover</p>
                     <p class='shirt-price'>$19</p>
@@ -66,20 +74,22 @@
                 <img class='shirt-front' src='images/yellow-front.png'>
                 <img class='shirt-back' src='images/yellow-back.png'>
                 <p class='fa fa-undo'></p>
-                <ul class='shirt-options'>
-                    <li class='fa fa-money'></li>
-                    <li class='fa fa-euro'></li>
-                    <li class='fa fa-gbp menu-button'>
-                        <ul class ='dropdown'>
-                            <li>XL</li>
-                            <li>L</li>
-                            <li>M</li>
-                            <li>S</li>
-                        </ul>
-                    </li>
-                    <li class='fa fa-eur'></li>
-                    <li class='fa fa-btc'></li>
-                </ul>
+                <nav>
+                    <ul class='shirt-options'>
+                        <li class='fa fa-money'></li>
+                        <li class='fa fa-euro'></li>
+                        <li class='fa fa-gbp'>
+                            <ul class ='dropdown'>
+                                <li>XL</li>
+                                <li>L</li>
+                                <li>M</li>
+                                <li>S</li>
+                            </ul>
+                        </li>
+                        <li class='fa fa-eur'></li>
+                        <li class='fa fa-btc'></li>
+                    </ul>
+                </nav>
                 <section class='shirt-info'>
                     <p class='shirt-name'>Forrest Walk</p>
                     <p class='shirt-price'>$39</p>
