I added the section on the yellow t-shirt to the image and undo icon

--- a/index.html
+++ b/index.html
@@ -71,9 +71,11 @@
 
 
             <article>
+              <section>
                 <img class='shirt-front' src='images/yellow-front.png'>
                 <img class='shirt-back' src='images/yellow-back.png'>
                 <p class='fa fa-undo'></p>
+              </section>
                 <nav>
                     <ul>
                         <li class='fa fa-money'></li>
