I refactored my code so that the shirt name is an h1 heading and the price is an h2 heading

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                   </ul>
               </nav>
               <section class='shirt-info'>
-                  <p class='shirt-name'>Save my trees</p>
-                  <p class='shirt-price'>$29</p>
+                  <h1 class='shirt-name'>Save my trees</h2>
+                  <h2 class='shirt-price'>$29</h2>
               </section>
             </article>
 
@@ -64,8 +64,8 @@
                 </ul>
               </nav>
                 <section class='shirt-info'>
-                    <p class='shirt-name'>Nature Lover</p>
-                    <p class='shirt-price'>$19</p>
+                    <h1 class='shirt-name'>Nature Lover</h1>
+                    <h2 class='shirt-price'>$19</h2>
                 </section>
             </article>
 
@@ -93,8 +93,8 @@
                     </ul>
                 </nav>
                 <section class='shirt-info'>
-                    <p class='shirt-name'>Forrest Walk</p>
-                    <p class='shirt-price'>$39</p>
+                    <h1 class='shirt-name'>Forrest Walk</h1>
+                    <h2 class='shirt-price'>$39</h2>
                 </section>
             </article>
 
